--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./db-init:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 10s
       retries: 5
 
